src/styles/Projects.css
.projects {
  width: 100vw;
}

.projects-wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
}

.project-info {
  align-items: center;
  justify-self: center;
  font-size: 13pt;
  width: 600px;
}

.project-img {
  align-self: center;
  cursor: pointer;
}

.row {
  padding: 30px;
}
/* @media only screen and (max-width: 1100px) {
  .projects-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 30px;
    margin: auto;
  }

  .project-info {
    width: 300px;
  }
  .project-img {
    width: 300px;
  }
} */

@media only screen and (max-width: 760px) {
  .projects-wrapper {
    display: grid;
    grid-template-columns: 1fr;
    column-gap: 100px;
    margin: auto;
  }

  .project-info {
    width: 300px;
  }
  .project-img {
    width: 300px;
  }
}

